modificaciones en navbar

--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="card-deck">
                 <div class="card border-primary mb-3 mt-3">
-                    <div class="card-header"><a class="repo-link" href="https://github.com/AnnMtz/reto-smartlending" target="_blank">Reto Smartlending</a></div>
+                    <div class="card-header"><a class="repo-link" href="https://github.com/AnnMtz/Proyecto-HTML-CSS" target="_blank">Proyecto HTML-CSS</a></div>
                     <div class="card-body">
                         <h5 class="card-title">Acceso público</h5>
                         <p class="card-text">HTML</p>
@@ -55,7 +55,7 @@
         <div class="row">
             <div class="card-deck">
                 <div class="card border-primary mb-3 mt-3">
-                    <div class="card-header"><a class="repo-link" href="https://github.com/AnnMtz/Proyecto-HTML-CSS" target="_blank">Proyecto HTML-CSS</a></div>
+                    <div class="card-header"><a class="repo-link" href="https://github.com/AnnMtz/MENTORES" target="_blank">Proyecto "Mentores"</a></div>
                     <div class="card-body">
                         <h5 class="card-title">Acceso público</h5>
                         <p class="card-text">HTML</p>
