--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -27,8 +27,8 @@
               <span class="ml-3 mr-3">Ana Martínez</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Perfil</a>
-            <a class="dropdown-item" href="#">Repositorios</a>
+            <a class="dropdown-item" href="https://github.com/AnnMtz" target="_blank">Perfil</a>
+            <a class="dropdown-item" href="https://github.com/AnnMtz?tab=repositories" target="_blank">Repositorios</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Cerrar Sesión</a>
           </div>
